--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link href="C:\Users\PRAMOD\excursion\resources\css\style.css" rel="stylesheet"/>
+      <link href="./resources/css/style.css" rel="stylesheet"/>
       <title>Head</title>
     </head>
     <body>
